# psyche-llm-study

./: .gitignore  CLAUDE.md  ENHANCEMENTS  INSTALL.md  LICENSE  QUERIES.md  QUICKSTART.md  README.md  models.json  pyproject.toml  questions.json  requirements.txt  setup.sh
experiments/newcomb-2026-05/: exp_models.json  exp_questions.json  experiment.json
experiments/pilot-2026-05/: exp_models.json  exp_questions.json  experiment.json
scripts/: README.md  analyze_results.py  classify_results.py  judge_responses.py  new_experiment.py  run_study.py  run_study_chain.py  summarize_label.py
tests/: README.md  test_chain.py  test_models.py  verify_setup.py
